--- a/client/assets/styles/mixins/_mixins.scss
+++ b/client/assets/styles/mixins/_mixins.scss
@@ -1,2 +1,4 @@
 @import "media-query";
-@import "responsive-padding";
+@import "responsive-spacing";
+@import "responsive-image";
+@import "shadow";
