--- a/client/assets/styles/variables/_breakpoints.scss
+++ b/client/assets/styles/variables/_breakpoints.scss
@@ -4,11 +4,11 @@
  * that the breakpoint fires at.
  */
 $breakpoints: (
-    'xs' 'screen and (max-width: 480px)',
-    'sm' 'screen and (max-width: 767px)',
-    'md' 'screen and (min-width: 768px)',
+    'xxs' 'screen and (max-width: 480px)',
+    'xs' 'screen and (min-width: 600px)',
+    'sm' 'screen and (min-width: 840px)',
+    'md' 'screen and (min-width: 960px)',
     'lg' 'screen and (min-width: 1280px)',
-    'lg-down' 'screen and (max-width: 1280px)',
     'xlg' 'screen and (min-width: 1440px)',
-    'xlg-down' 'screen and (max-width: 1440px)'
+    'xxlg' 'screen and (min-width: 1920px)',
 )!global;
