--- a/client/assets/styles/variables/_gutters.scss
+++ b/client/assets/styles/variables/_gutters.scss
@@ -1,8 +1,8 @@
 $gutters: (
-    'none': 0px,
-    'xs': 8px,
-    'sm': 12px,
-    'md': 16px,
-    'lg': 24px,
-    'xlg': 32px,
-)
+    '0': 0,
+    '8': 8px,
+    '12': 12px,
+    '16': 16px,
+    '24': 24px,
+    '32': 32px,
+)!global;
