sprint input (not yet wired up)

--- a/client/assets/styles/mixins/_responsive-spacing.scss
+++ b/client/assets/styles/mixins/_responsive-spacing.scss
@@ -15,4 +15,8 @@
     @include media-query(xlg) {
         #{$prop}: get-gutter('24');
     }
+
+    @include media-query(xxlg) {
+        #{$prop}: get-gutter('32');
+    }
 }
