--- a/client/components/Card/style/Card.scss
+++ b/client/components/Card/style/Card.scss
@@ -2,6 +2,7 @@
 
 .card {
     @include responsive-spacing(margin-bottom);
+    @include shadow(2);
 
     display: inline-block;
     position: relative;
