--- a/client/components/TextInput/style/TextInput.scss
+++ b/client/components/TextInput/style/TextInput.scss
@@ -1,17 +1,20 @@
+@import "../../../assets/styles/base";
+
 .text-input {
     position: relative;
 
     .input {
         background-color: transparent;
         border: none;
+        resize: vertical;
         border-bottom: 1px solid #444;
         border-radius: 0;
         outline: none;
         width: 100%;
-        box-shadow: none;
-        box-sizing: content-box;
+        box-shadow: 0 0 0 0 transparent;
         transition: all 300ms;
         margin: 1rem 0;
+        padding: 0 0 0.5rem 0;
 
         &.active {
             border-bottom: 1px solid blue;
@@ -35,7 +38,7 @@
         top: 1rem;
         left: 0;
         cursor: text;
-        transition: .2s ease-out;
+        transition: 200ms ease-out;
 
         &.active {
             color: blue;
@@ -51,6 +54,10 @@
             color: red;
         }
     }
+}
+
+.text-input + .text-input {
+    @include responsive-spacing(margin-top);
 }
 
 .required {
